--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900");
+@import url("https://fonts.googleapis.com/css?family=Lobster Two' rel='stylesheet");
 /* :: 2.0 Import All CSS */
 @import url(css/bootstrap.min.css);
 @import url(css/animate.css);
