--- a/style.css
+++ b/style.css
@@ -1611,3 +1611,12 @@ textarea {
       color: #ffffff; }
 
 /*# sourceMappingURL=style.css.map */
+
+
+
+.med{
+  margin-top: 100px !important;
+}
+.med .{
+  background-color: #006cff;
+}
